# Elaborato_2_PC_Giovanni_Stefanini

./: CMakeLists.txt  README.md  histogram_equalization_cuda.cu  histogram_equalization_cuda.h  histogram_equalization_seq.cpp  histogram_equalization_seq.h  kernel.cu  main.cpp  main.cu
